--- a/.github/workflows/myWorkFlow.yml
+++ b/.github/workflows/myWorkFlow.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up JDK 20
         uses: actions/setup-java@v3
         with:
-          java-version: '20'
+          java-version: 20
           distribution: 'temurin'
       - name: Build with Gradle
         uses: gradle/gradle-build-action@v2
