--- a/.github/workflows/myWorkFlow.yml
+++ b/.github/workflows/myWorkFlow.yml
@@ -13,9 +13,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 20
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
-          java-version: 20
+          java-version: '20'
           distribution: 'temurin'
      
       - name: Build with Gradle
@@ -27,7 +27,7 @@ jobs:
         uses: paambaati/codeclimate-action@v5.0.0
         env:
            CC_TEST_REPORTER_ID: ${{secrets.CC_TEST_REPORTER_ID}}
-           JACOCO_SOURCE_PATH: "${{github.workspace}}/app/src/main/java"
+           JACOCO_SOURCE_PATH: /app/src/main/java
         with:
           coverageCommand: make report
           coverageLocations: ${{github.workspace}}/app/build/reports/jacoco/test/jacocoTestReport.xml:jacoco
