--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,9 +16,10 @@ repositories {
     mavenCentral()
 }
 
-compileJava {
+/* compileJava {
     options.release = 20
 }
+*/
 
 dependencies {
     implementation 'org.apache.commons:commons-lang3:3.12.0'
